# Simulator_Underwater

./: README.md
assistants/: CMakeLists.txt  package.xml
assistants/launch/: message_to_tf.launch  publish_footprints.launch  publish_vehicle_footprint.launch  set_simulation_timer.launch  unpause_simulation.launch
assistants/templates/robot_model/launch/: upload.launch.template
control/control/auv_control_allocator/: CMakeLists.txt  package.xml  setup.py
control/control/auv_control_allocator/launch/: start_control_allocator.launch
control/control/auv_control_allocator/msg/: AUVCommand.msg
control/control/auv_control_allocator/scripts/: control_allocator
control/control/control_msgs/: CMakeLists.txt  package.xml
control/control/control_msgs/msg/: Trajectory.msg  TrajectoryPoint.msg  Waypoint.msg  WaypointSet.msg
control/control/control_msgs/srv/: AddWaypoint.srv  GetWaypoints.srv  GoTo.srv  GoToIncremental.srv  Hold.srv  InitHelicalTrajectory.srv  InitNPolygonTrajectory.srv  InitRectTrajectory.srv  InitWaypointSet.srv  InitWaypointsFromFile.srv  IsRunningTrajectory.srv
control/control/thruster_manager/: CMakeLists.txt  package.xml  setup.py
control/control/thruster_manager/launch/: thruster_manager.launch
control/control/trajectory_control/: CMakeLists.txt  package.xml  setup.py
control/control/utils/: CMakeLists.txt  package.xml
control/control/utils/src/: send_waypoint_file.py  (+2 more)
control/trajectory_control/: CMakeLists.txt  package.xml
control/trajectory_control/launch/: auv_geometric_tracking_controller.launch  rov_mb_fl_controller.launch  rov_mb_sm_controller.launch  rov_nl_pid_controller.launch  rov_nmb_sm_controller.launch  rov_pd_grav_compensation_controller.launch  rov_pid_controller.launch  rov_sf_controller.launch  rov_ua_pid_controller.launch
control/trajectory_control/scripts/: auv_geometric_tracking_controller.py  demo_wp_trajectory_generator.py  rov_mb_fl_controller.py  rov_mb_sm_controller.py  rov_nl_pid_controller.py  rov_nmb_sm_controller.py  rov_pd_grav_compensation_controller.py  rov_pid_controller.py  rov_sf_controller.py  rov_ua_pid_controller.py
control/truster_manager/: CMakeLists.txt  package.xml  setup.py
description/: CMakeLists.txt  package.xml
description/launch/: message_to_tf.launch
description/scripts/: spawn_model
description/urdf/: common.urdf.xacro
gazebo_plugins/gazebo_plugins/: CMakeLists.txt  package.xml
gazebo_plugins/gazebo_plugins/msgs/: Accel.proto  Double.proto
gazebo_plugins/gazebo_plugins/src/: BuoyantObject.cc  Dynamics.cc  FinPlugin.cc  HydrodynamicModel.cc  LiftDragModel.cc  ThrusterConversionFcn.cc  ThrusterConversionFcn_TEST.cc  ThrusterDynamics_TEST.cc  ThrusterPlugin.cc  UmbilicalModel.cc  UmbilicalPlugin.cc  UnderwaterObjectPlugin.cc
gazebo_plugins/gazebo_ros_plugins/: CMakeLists.txt  package.xml
gazebo_plugins/gazebo_ros_plugins/src/: AccelerationsTestPlugin.cc  FinROSPlugin.cc  JointStatePublisher.cc  ThrusterROSPlugin.cc  UnderwaterObjectROSPlugin.cc
gazebo_plugins_sim/gazebo_plugins_sim/: CMakeLists.txt  package.xml
gazebo_plugins_sim/gazebo_plugins_sim/msgs/: Double.proto
gazebo_plugins_sim/gazebo_plugins_sim/src/: BuoyantObject.cc  Dynamics.cc  FinPlugin.cc  HydrodynamicModel.cc  LiftDragModel.cc  ThrusterConversionFcn.cc  ThrusterConversionFcn_TEST.cc  ThrusterDynamics_TEST.cc  ThrusterPlugin.cc  UmbilicalModel.cc  UmbilicalPlugin.cc  UnderwaterObjectPlugin.cc
sensor_plugins/sensor_ros_plugins/: CMakeLists.txt  package.xml
sensor_plugins/sensor_ros_plugins/msgs/: SensorDvl.proto  SensorImu.proto  SensorMagnetic.proto  SensorPressure.proto  SensorRpt.proto
sensor_plugins/sensor_ros_plugins/src/: CPCROSPlugin.cc  DVLROSPlugin.cc  GPSROSPlugin.cc  IMUROSPlugin.cc  MagnetometerROSPlugin.cc  PoseGTROSPlugin.cc  ROSBaseModelPlugin.cc  ROSBasePlugin.cc  ROSBaseSensorPlugin.cc  RPTROSPlugin.cc  SubseaPressureROSPlugin.cc  UnderwaterCameraROSPlugin.cc  gazebo_ros_image_sonar.cpp
sensor_plugins/sensor_ros_plugins/urdf/: camera_snippets.xacro  chemical_concentration_snippets.xacro  dvl_snippets.xacro  gps_sensor_snippets.xacro  imu_snippets.xacro  magnetometer_snippets.xacro  pose_3d_snippets.xacro  pressure_snippets.xacro  rpt_snippets.xacro  sensor_snippets.xacro  sonar_snippets.xacro  stereo_snippets.xacro
sensor_plugins/sensor_ros_plugins_msgs/: CMakeLists.txt  package.xml
sensor_plugins/sensor_ros_plugins_msgs/msg/: ChemicalParticleConcentration.msg  DVL.msg  DVLBeam.msg  PositionWithCovariance.msg  PositionWithCovarianceStamped.msg  Salinity.msg
sensor_plugins/sensor_ros_plugins_msgs/srv/: ChangeSensorState.srv
simulator/: CMakeLists.txt  package.xml
tools/: CMakeLists.txt  package.xml
tools/launch/: message_to_tf.launch  publish_body_sname.launch  publish_footprints.launch  publish_vehicle_footprint.launch  set_simulation_timer.launch  unpause_simulation.launch
tools/scripts/: publish_world_models.py  set_simulation_timer.py  spawn_model
tools/src/: message_to_tf.cc
tools/urdf/: common.urdf.xacro
worlds/: CMakeLists.txt  package.xml
worlds/launch/: empty_underwater_world.launch  ocean_waves.launch
worlds/models/ned_frame/: model.sdf
worlds/models/ocean/: model.config  model.sdf
worlds/models/ocean_box/: model.sdf
worlds/models/sand_heightmap/: model.sdf
worlds/models/sea_bottom/: model.sdf
worlds/models/sea_surface/: model.sdf
worlds/worlds/: empty_underwater.world  ocean_waves.world
worlds_plugins/worlds_plugins/: CMakeLists.txt  package.xml
worlds_plugins/worlds_plugins/src/: GaussMarkovProcess.cc  UnderwaterCurrentPlugin.cc
worlds_plugins/worlds_plugins_ros/: CMakeLists.txt  package.xml
worlds_plugins/worlds_plugins_ros/src/: SphericalCoordinatesROSInterfacePlugin.cc  UnderwaterCurrentROSPlugin.cc
worlds_plugins/worlds_plugins_ros_msgs/: CMakeLists.txt  package.xml
worlds_plugins/worlds_plugins_ros_msgs/srv/: GetCurrentModel.srv  GetOriginSphericalCoord.srv  SetCurrentDirection.srv  SetCurrentModel.srv  SetCurrentVelocity.srv  SetOriginSphericalCoord.srv  TransformFromSphericalCoord.srv  TransformToSphericalCoord.srv
(+185 files in other folders)
