<?xml version="1.0"?>
<package format="2">
  <name>simulator</name>
  <version>0.2.0</version>
  <description>The simulator package</description>

  <maintainer email="alamcastillo@outlook.com">CASTILLO HERRERA Alam</maintainer>
  
  <author email="alamcastillo@outlook.com">CASTILLO HERRERA Alam</author>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>tools</exec_depend>
  <exec_depend>auv_control_allocator</exec_depend>
  <exec_depend>description</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>utils</exec_depend>
  <exec_depend>thruster_manager</exec_depend>
  <exec_depend>trajectory_control</exec_depend>
  <exec_depend>gazebo_plugins_sim</exec_depend>
  <exec_depend>gazebo_ros_plugins</exec_depend>
  <exec_depend>gazebo_ros_plugins_msgs</exec_depend>
  <exec_depend>gazebo_worlds</exec_depend>
  <exec_depend>sensor_ros_plugins_msgs</exec_depend>
  <exec_depend>sensor_ros_plugins</exec_depend>
  <exec_depend>world_plugins</exec_depend>
  <exec_depend>world_ros_plugins</exec_depend>
  <exec_depend>world_ros_plugins_msgs</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
