<?xml version="1.0"?>
<package format="2">
  <name>gazebo_ros_plugins</name>
  <version>0.1.1</version>
  <description>The gazebo_ros_plugins package</description>

  <maintainer email="alamcastillo@outlook.com">Alam CASTILLO HERRERA</maintainer>

  <author email="alamcastillo@outlook.com">Alam CASTILLO HERRERA</author>

  <license>Apache-2.0</license>

  <depend>gazebo_plugins</depend>
  <depend>gazebo_ros_plugins_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>roscpp</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>gazebo_dev</depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
