<?xml version="1.0"?>
<package format="2">
  <name>gazebo_plugins_sim</name>
  <version>0.1.1</version>
  <description>The gazebo_plugins_sim package</description>

 <maintainer email="alamcastillo@outlook.com">Alam CASTILLO HERRERA</maintainer>

  <author email="alamcastillo@outlook.com">Alam CASTILLO HERRERA</author>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!--<depend>gazebo_ros</depend>-->
  <depend>gazebo_dev</depend>
  <depend>protobuf-dev</depend>
  <depend>eigen</depend>

  <test_depend>rosunit</test_depend>

</package>
