<?xml version="1.0"?>
<package format="2">
  <name>worlds_plugins</name>
  <version>0.1.1</version>
  <description>The worlds_plugins package</description>

  <maintainer email="alamcastillo@outlook.com">CASTILLO HERRERA Alam</maintainer>
  
  <author email="alamcastillo@outlook.com">CASTILLO HERRERA Alam</author>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo_ros</build_depend>
  <build_export_depend>gazebo_ros</build_export_depend>

  <depend>gazebo_dev</depend>
  <depend>gazebo_msgs</depend>

  <export>
  </export>
</package>
