<?xml version="1.0"?>
<package format="2">
  <name>worlds_plugins_ros</name>
   <version>0.1.0</version>
  <description>The worlds_plugins_ros package</description>

   <maintainer email="alamcastillo@outlook.com">CASTILLO HERRERA Alam</maintainer>
  
  <author email="alamcastillo@outlook.com">CASTILLO HERRERA Alam</author>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo_msgs</depend>
  <depend>roscpp</depend>
  <depend>worlds_plugins</depend>
  <depend>geometry_msgs</depend>
  <depend>worlds_plugins_ros_msgs</depend>
  <depend>gazebo_dev</depend>

  <export>
  </export>
</package>
