<?xml version="1.0"?>
<package format="2">
  <name>worlds_plugins_ros_msgs</name>
  <version>0.1.0</version>
  <description>The worlds_plugins_ros_msgs package</description>

  <maintainer email="alamcastillo@outlook.com">CASTILLO HERRERA Alam</maintainer>
  
  <author email="alamcastillo@outlook.com">CASTILLO HERRERA Alam</author>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>message_runtime</exec_depend>
  <export>
  </export>
</package>
