<?xml version="1.0"?>
<package format="2">
  <name>control_msgs</name>
  <version>0.1.1</version>
  <description>The control_msgs package</description>

   <maintainer email="alamcastillo@outlook.com">CASTILLO HERRERA Alam</maintainer>
  
  <author email="alamcastillo@outlook.com">CASTILLO HERRERA Alam</author>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>message_generation</depend>

  <exec_depend>message_runtime</exec_depend>
</package>
